Fixed some unit tests for services/controllers